--- a/blog/templates/includes/navbar.html
+++ b/blog/templates/includes/navbar.html
@@ -26,6 +26,10 @@
                     </ul>
                 </li>
             </ul>
+            <form class="d-flex" action="/search/" method="get">
+                <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search" required>
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
         </div>
     </div>
 </nav>
