--- a/blog/templates/includes/navbar.html
+++ b/blog/templates/includes/navbar.html
@@ -10,6 +10,9 @@
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/">Home</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/search">Search</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -25,6 +28,7 @@
                         {% endfor %}
                     </ul>
                 </li>
+                
             </ul>
             <form class="d-flex" action="/search/" method="get">
                 <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search" required>
