--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
 
+<style>
+    .small {
+        font-size: 0.875rem;
+        color: #4b4b4b;
+    }
+</style>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
         integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        {% include 'includes/csslinks.html' %}
+    {% include 'includes/csslinks.html' %}
     <title>
         {% block title %}
         {% endblock title %}
