--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 {% if request.user.is_authenticated %}
 <script>
-    window.location.href = '#';
+    window.location.href = '{% url "accounts:profile" %}';
 </script>
 {% endif %}
 
@@ -51,7 +51,7 @@
 
                                 {% if form.errors %}
                                 <div class="alert alert-primary" role="alert">
-                                    Error: Username or Password not correct!
+                                    Error: Username or Password are not correct!
                                 </div>
                                 {% endif %}
 
@@ -66,7 +66,7 @@
                                     in</button>
 
                                 <p class="small font-weight-bold text-center pb-3">
-                                    <a href='#'>New to Blog? Create an account</a>
+                                    <a href='#'>New to the Blog? Create an account</a>
                                 </p>
 
                                 <hr class="mb-3">
