--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -12,34 +12,36 @@ Nue Blog
             <img class="img-fluid jumbotron-logo" src="{% static 'images/nueuibloglogo.png' %}">
         </h1>
         <p class="lead text-uppercase">Here's a nightly summary of what the hell is going on...</p>
+        <div class="flexed">
+            <a class="about-link" href="">ABOUT</a>
+            <span class="mx-2">|</span>
+            <a class="contact-link" href="">CONTACT</a>
+        </div>
     </div>
 </div>
 <div class="album py-5 bg-light">
     <div class="container">
         <div class="row">
-            
-
-            
             {% for post in posts %}
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <a class="text-dark" href="{{post.get_absolute_url}}">
                     <div class="card mb-5">
                         <img class="card-img-top post-image" src="{{ post.image.url }}" alt="{{ post.title }}">
                         <div class="card-body">
                             <h2 style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
                             <p class="card-text" style="height: 65px;">{{post.excerpt|truncatechars:50}}</p>
-                            
+
                         </div>
                         <div class="d-flex py-1 justify-content-between align-items-right">
                             <small class="text-muted post-published-date">{{post.publish}}</small>
                             <small class="text-muted post-author">Created by: {{post.author}}</small>
-                           
+
                         </div>
                     </div>
                 </a>
             </div>
             {% endfor %}
-       
+
         </div>
     </div>
 </div>
