--- a/templates/blog/single.html
+++ b/templates/blog/single.html
@@ -1,4 +1,5 @@
 {% extends "base/base.html" %}
+{% load static %}
 
 {% block title %}
 {{post.title}}
@@ -28,16 +29,19 @@
 </style>
 
 <div class="container">
+
     <div class="row justify-content-md-center pt-5">
 
-        <div class="col-md-7">
-            <h1>{{post.title}}</h1>
+        <div class="col-md-9"><img class="img-fluid" src="{{post.image.url}}" alt="{{ post.title }}"></div>
+        <div class="col-md-9">
+            <h1 class="post-title my-3"><i class="fas fa-angle-double-right mr-3" style="color: #48AA8B;"></i>{{post.title}}</h1>
+            <small>By: {{post.author}}</small>
         </div>
-        <div class="col-md-9"><img class="card-img-top" src="{{post.image.url}}" alt="{{ post.title }}"></div>
-        <div class="col-md-7">
-            <p>{{post.content|safe}}</p>
+        <div class="col-md-9 album bg-light">
+            <p>{{post.content|linebreaks}}</p>
         </div>
-        <div class="col-md-7">
+
+        <div class="col-md-9 mt-5">
 
             {% with allcomments.count as total_comments %}
             <h2>
