--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -34,7 +34,7 @@ Nue Blog
                         </div>
                         <div class="d-flex py-1 justify-content-between align-items-right">
                             <small class="text-muted post-published-date">{{post.publish}}</small>
-                            <small class="text-muted post-author">Created by: {{post.author}}</small>
+                            <small class="text-muted post-author">{{post.author}}</small>
 
                         </div>
                     </div>
