--- a/templates/base/nav-main.html
+++ b/templates/base/nav-main.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <style>
     .dot {
         height: 30px;
@@ -10,11 +12,22 @@
 </style>
 
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-normal"><a class="text-dark" href="/">Demo</a></h5>
+    <h5 class="my-0 mr-md-auto font-weight-normal">
+        <a class="navbar-brand" href="#">
+            <img class="img-fluid navbar-logo" src="{% static 'images/nueuibloglogo.png' %}">
+
+        </a>
+    </h5>
+    <form class="d-flex" action="/search/" method="get">
+        <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search"
+            required>
+        <button class="btn" type="submit">Search</button>
+    </form>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">Features</a>
-        <a class="p-2 text-dark" href="#">Enterprise</a>
-        <a class="p-2 text-dark" href="#">Support</a>
+
+        <a class="p-2 text-dark" href="/">Home</a>
+        <a class="p-2 text-dark" href="/search">Search</a>
+        
     </nav>
     {% if request.user.is_authenticated %}
     <span class="dot"></span>
@@ -25,8 +38,6 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{% url "accounts:profile" %}">Dashboard</a>
-                <a class="dropdown-item" href="{% url "accounts:edit" %}">Edit details</a>
-                <a class="dropdown-item" href="{% url "password_change" %}">Change Password</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url "logout" %}">Logout</a>
             </div>
@@ -34,7 +45,6 @@
     </ul>
     {% else %}
     <nav>
-        <a class="p-2 text-dark" href="{% url "accounts:register" %}">Register</a>
         <a class="p-2 text-dark" href="{% url "login" %}">Login</a>
     </nav>
     {% endif %}
