--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,11 +1,11 @@
+{% load static %}
 <div class="container">
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
 
         <div class="row">
 
             <div class="col-12 col-md">
-                <img class="mb-2" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
-                <small class="d-block mb-3 text-muted">&copy; 2017-2020</small>
+                <img class="mb-2" src="{% static 'images/nueuibloglogo.png' %}" alt="" width="50">
             </div>
             <div class="col-6 col-md">
                 <h5>Features</h5>
