--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,12 +1,23 @@
 {% load static %}
+<style>
+    .dot {
+        height: 30px;
+        width: 30px;
+        background-color: #000;
+        border-radius: 50%;
+        display: inline-block;
+
+    }
+</style>
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img class="img-fluid navbar-logo" src="{% static 'images/nueuibloglogo.png' %}">
 
         </a>
-        <button class="navbar-toggler mt-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler mt-1" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><i class="fas fa-bars" style="font-size: 30px;"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -34,11 +45,36 @@
                 </li>
 
             </ul>
+
+            
+
             <form class="d-flex" action="/search/" method="get">
                 <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search"
                     required>
                 <button class="btn" type="submit">Search</button>
             </form>
+            {% if request.user.is_authenticated %}
+            <div class="flexed ml-3">
+                <span class="dot"></span>
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{% url "accounts:profile" %}">Dashboard</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url "logout" %}">Logout</a>
+                            {% else %}
+                            <a class="p-2 text-dark" href="{% url "login" %}">Login</a>
+                        </div>
+                    </li>
+                </ul>
+                <nav>
+                </nav>
+                {% endif %}
+            </div>
+
         </div>
     </div>
 </nav>
