--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,4 @@
-{% extends "../base/base.html" %}
-{% block title %}Log-in{% endblock %}
+{% include 'base/base.html' %}
 {% block content %}
 
 {% if request.user.is_authenticated %}
