--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -76,7 +76,7 @@
                                 <small class="form-text text-muted mb-4">
                                     At least 8 characters and 1 digit
                                 </small>
-                                {{ form.password2 }}
+                                {{ form.repeat_password }}
                                 <small class="form-text text-muted mb-4">
                                     Repeat password
                                 </small>
@@ -87,7 +87,7 @@
                                         Subscribe to our newsletter</label>
                                 </div>
 
-                                <button class="btn btn-dark btn-block py-2 mb-4 mt-5 font-weight-bold"
+                                <button class="btn btn-dark btn-block py-2 mb-4 mt-5"
                                     type="submit">Register</button>
 
                                 <hr class="mb-3">
