Added password reset feature

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -29,7 +29,7 @@
 <body>
 
 
-    {% if request.get_full_path == '/account/login/' %}
+    {% if request.get_full_path == '/account/password_reset/done/' %}
     {% else %}
     {% include 'includes/navbar.html' %}
     {% endif %}
