--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,72 +9,35 @@
 
     }
 </style>
-<nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h5 class="my-0 mr-md-auto font-weight-normal"><a class="text-dark" href="/">
             <img class="img-fluid navbar-logo" src="{% static 'images/nueuibloglogo.png' %}">
-
         </a>
-        <button class="navbar-toggler mt-1" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"><i class="fas fa-bars" style="font-size: 30px;"></i></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/search">Search</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Categories
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        {% for category in category_list  %}
-                        <li>
-                            <a class="dropdown-item" href="/category/{{ category.name }}">
-                                {{ category.name|title }}
-                            </a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </li>
-
-            </ul>
-
-            
-
-            <form class="d-flex" action="/search/" method="get">
-                <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search"
-                    required>
-                <button class="btn" type="submit">Search</button>
-            </form>
-            {% if request.user.is_authenticated %}
-            <div class="flexed ml-3">
-                <span class="dot"></span>
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{% url "accounts:profile" %}">Dashboard</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url "logout" %}">Logout</a>
-                            {% else %}
-                            <a class="p-2 text-dark" href="{% url "login" %}">Login</a>
-                        </div>
-                    </li>
-                </ul>
-                <nav>
-                </nav>
-                {% endif %}
+    </h5>
+    <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="/search">Search</a>
+        <a class="p-2 text-dark" href="#">About</a>
+        <a class="p-2 text-dark" href="#">Contact</a>
+    </nav>
+    {% if request.user.is_authenticated %}
+    <span class="dot"></span>
+    <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="{% url "accounts:profile" %}">Dashboard</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url "logout" %}">Logout</a>
             </div>
-
-        </div>
-    </div>
-</nav>
+        </li>
+    </ul>
+    {% else %}
+    <nav>
+        <a class="p-2 text-dark" href="{% url "accounts:register" %}">Register</a>
+        <a class="p-2 text-dark" href="{% url "login" %}">Login</a>
+    </nav>
+    {% endif %}
+</div>
