--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -30,7 +30,9 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="{% url "accounts:profile" %}">Dashboard</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url "logout" %}">Logout</a>
+                <a class="dropdown-item" href="{% url 'accounts:edit' %}">Edit Profile</a>
+                <a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a>
+                <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
             </div>
         </li>
     </ul>
