--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -9,7 +9,7 @@
                 creator,
                 etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
             <p>
-                <a href="#" class="btn btn-primary my-2">Logout</a>
+                <a href="{% url 'logout' %}" class="btn btn-primary my-2">Logout</a>
             </p>
         </div>
     </section>
