--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,9 +1,13 @@
 {% extends "base/base.html" %}
+{% load static %}
 {% block title %}Profile{% endblock %}
 {% block content %}
 <div class="container">
     <section class="jumbotron text-center bg-white">
         <div class="container">
+            <h1 class="display-4">
+                <img class="img-fluid jumbotron-logo" src="{% static 'images/nueuibloglogo.png' %}">
+            </h1>
             <h1>User Dashboard</h1>
             <p class="lead text-muted">Something short and leading about the collection below—its contents, the
                 creator,
