--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -35,6 +35,7 @@
                 <a class="dropdown-item" href="{% url "accounts:profile" %}">Dashboard</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'accounts:edit' %}">Edit Profile</a>
+                <a class="dropdown-item" href="{% url 'accounts:favorites_list' %}">Saved Posts</a>
                 <a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a>
                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
             </div>
