--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -5,7 +5,7 @@
 <div class="container">
     <section class="jumbotron text-center bg-white">
         <div class="container">
-            <h1 class="display-4">
+            <h1 class="display-4 mb-4">
                 <img class="img-fluid jumbotron-logo" src="{% static 'images/nueuibloglogo.png' %}">
             </h1>
             <h1>User Dashboard</h1>
