--- a/templates/blog/single.html
+++ b/templates/blog/single.html
@@ -1,6 +1,4 @@
 {% extends "base/base.html" %}
-{% load static %}
-{% include 'django_quill/media.html' %}
 
 {% block title %}
 {{post.title}}
@@ -9,12 +7,26 @@
 {% block content %}
 
 <style>
-    .children {
-        padding-left: 48px;
+    @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap');
+
+    .h1 {
+        font-size: 2.55rem;
+        line-height: 2.6rem;
+        letter-spacing: -0.063px;
     }
 
-    .children2 {
-        padding-left: 0px;
+    h2 {
+        font-size: 1.9rem;
+        line-height: 2.6rem;
+        letter-spacing: -0.063px;
+        font-weight: 700;
+        padding-top: 48px;
+    }
+
+    p {
+        line-height: 2rem;
+        font-size: 1.3rem
     }
 
     @media screen and (min-width: 600px) {
@@ -28,48 +40,114 @@
             /* will touch very left side */
         }
     }
+
+    .avatar_single {
+        height: 48px;
+        width: 48px;
+        background-color: #000;
+        border-radius: 50%;
+        display: inline-block;
+
+    }
+
+    .smaller {
+        font-size: 0.8rem;
+    }
 </style>
 
 <div class="container">
-
     <div class="row justify-content-md-center pt-5">
 
-        <div class="col-md-9"><img class="img-fluid" src="{{post.image.url}}" alt="{{ post.title }}"></div>
-        <div class="col-md-9">
-            <h1 class="post-title my-3">
-                <i class="fas fa-angle-double-right mr-3" style="color: #48AA8B;"></i>
-                {{post.title}}
+        <div class="col-md-9 d-flex justify-content-between">
+            <div class="d-flex">
+                <div>
+                    <img class="avatar_single" src="{{ post.author.profile.avatar.url }}">
+                </div>
+                <div class="pl-3 no-gutters">
+                    <div class="col-12 no-gutters">{{ post.author|title }}</div>
+                    <div class="col-12 no-gutters smaller text-muted">{{post.publish}}</div>
+                </div>
+            </div>
+            <div class="d-flex">
                 {% if request.user.is_authenticated %}
+                <div class="pr-2">
+                    <span class="" id="like_count">{{ post.like_count }}</span>
+                    <button class="btn-link text-dark p-0 border-0 btn-outline-light" id="like-button"
+                        value="{{post.id}}">
+                        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+                        </svg>
+                    </button>
+                </div>
                 {% if fav %}
                 <div>
-                    <a class="btn" href="{% url 'accounts:favorites_add' post.id %}">Remove From Favorites</a>
+                    <a href="{% url 'accounts:favorites_add' post.id %}" class="text-dark">
+                        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-bookmark-check"
+                            fill="#48AA8B" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M4.5 2a.5.5 0 0 0-.5.5v11.066l4-2.667 4 2.667V8.5a.5.5 0 0 1 1 0v6.934l-5-3.333-5 3.333V2.5A1.5 1.5 0 0 1 4.5 1h4a.5.5 0 0 1 0 1h-4z" />
+                            <path fill-rule="evenodd"
+                                d="M15.854 2.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L12.5 4.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
+                        </svg>
+                    </a>
                 </div>
                 {% else %}
                 <div>
-                    <a class="btn" href="{% url 'accounts:favorites_add' post.id %}">Add To Favorites</a>
+                    <a href="{% url 'accounts:favorites_add' post.id %}" class="text-dark">
+                        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-bookmark-plus"
+                            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M4.5 2a.5.5 0 0 0-.5.5v11.066l4-2.667 4 2.667V8.5a.5.5 0 0 1 1 0v6.934l-5-3.333-5 3.333V2.5A1.5 1.5 0 0 1 4.5 1h4a.5.5 0 0 1 0 1h-4zm9-1a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1H13V1.5a.5.5 0 0 1 .5-.5z" />
+                            <path fill-rule="evenodd"
+                                d="M13 3.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0v-2z" />
+                        </svg>
+                    </a>
                 </div>
                 {% endif %}
                 {% else %}
-                <div>
-                    <a class="btn" href="{% url 'accounts:register' %}">REGISTER</a>
+                <div class="pr-2">
+                    <span class="" id="like_count">{{ post.like_count }}</span>
+                    <a href="{% url 'accounts:register' %}"
+                        class="btn-link text-dark p-0 border-0 btn-outline-light" value="{{post.id}}">
+                        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+                        </svg>
+                    </a>
                 </div>
-               
+                <div>
+                    <a href="{% url 'accounts:register' %}" class="text-dark"> <svg width="1.5em" height="1.5em"
+                            viewBox="0 0 16 16" class="bi bi-bookmark-plus" fill="currentColor"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M4.5 2a.5.5 0 0 0-.5.5v11.066l4-2.667 4 2.667V8.5a.5.5 0 0 1 1 0v6.934l-5-3.333-5 3.333V2.5A1.5 1.5 0 0 1 4.5 1h4a.5.5 0 0 1 0 1h-4zm9-1a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1H13V1.5a.5.5 0 0 1 .5-.5z" />
+                            <path fill-rule="evenodd"
+                                d="M13 3.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0v-2z" />
+                        </svg></a>
+                </div>
                 {% endif %}
-
-
-            </h1>
-            <small>By: {{post.author}}</small><br>
-
+            </div>
         </div>
-        <div class="col-md-9 post-content album bg-light mt-5">
-            <p>{{post.content|linebreaks}}</p>
+        <div class="col-md-9 pt-3">
+            <div class="col-12 p-0">
+                <img class="img-fluid" style="width: 100%;" src="{{post.image.url}}" alt="{{ post.title }}">
+            </div>
+            <div class="col-12 p-0 my-3 d-flex justify-content-between">
+                <h1 class="post-title">{{post.title}}</h1>
+            </div>
+            <div class="col-12 post-content album bg-light mt-5">
+                <p>{{post.content|linebreaks}}</p>
+            </div>
         </div>
-
-        <div class="col-md-9 my-5 bg-light">
+        <div class="col-md-9">
             {% with allcomments.count as total_comments %}
-            <small>{{ total_comments }} comment{{ total_comments|pluralize }}</small>
+            <h2>
+                {{ total_comments }} comment{{ total_comments|pluralize }}
+            </h2>
             {% endwith %}
-
             {% load mptt_tags %}
             <div>
                 {% recursetree comments %}
@@ -88,53 +166,44 @@
                 {% endif %}
                 {% endrecursetree %}
             </div>
-
-            <div class="py-4">
-                <nav aria-label="Page navigation example">
-                    {% if comments.has_other_pages %}
-                    <ul class="pagination">
-                        {% if comments.has_previous %}
-                        <li class="page-item"><a class="page-link"
-                                href="?page={{ comments.previous_page_number }}">Previous</a>
-                        </li>
-                        {% else %}
-                        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-                        {% endif %}
-                        {% for num in comments.paginator.page_range %}
-                        {% if comments.number == l %}
-                        <li class="page-item active"><span class="page-link">{{ num }} <span
-                                    class="sr-only">(current)</span></span>
-                        </li>
-                        {% else %}
-                        <li><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
-                        {% endif %}
-                        {% endfor %}
-                        {% if comments.has_next %}
-                        <li class="page-item"><a class="page-link" href="?page={{ comments.next_page_number }}">Next</a>
-                        </li>
-                        {% else %}
-                        <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
-                        {% endif %}
-                    </ul>
+            <nav aria-label="Page navigation example">
+                {% if comments.has_other_pages %}
+                <ul class="pagination">
+                    {% if comments.has_previous %}
+                    <li class="page-item"><a class="page-link"
+                            href="?page={{ comments.previous_page_number }}">Previous</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
                     {% endif %}
-                </nav>
-            </div>
-
-            <div id="myDIV" style="display:block;">
-                <form id="myForm" method="post">
-                    <h2 style="text-transform: uppercase; font-weight: 300;">Create new comment</h2>
-                    {{ comment_form.as_p }}
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-lg btn-block">Submit</button>
-                </form>
-            </div>
-
+                    {% for num in comments.paginator.page_range %}
+                    {% if comments.number == l %}
+                    <li class="page-item active"><span class="page-link">{{ num }} <span
+                                class="sr-only">(current)</span></span>
+                    </li>
+                    {% else %}
+                    <li><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                    {% endif %}
+                    {% endfor %}
+                    {% if comments.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ comments.next_page_number }}">Next</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+                    {% endif %}
+                </ul>
+                {% endif %}
+            </nav>
+            <form id="myForm" method="post">
+                <h2>Create new comment</h2>
+                {{ comment_form.as_p }}
+                {% csrf_token %}
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+            </form>
         </div>
     </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
-    integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <script>
     function formExit() {
         document.getElementById("newForm").remove();
@@ -161,11 +230,29 @@
                 {% csrf_token %} \
                 <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button> \
               </form>');
-
-        //document.querySelector('#id_parentt [value="' + id + '"]').selected = true;
     }
 
     $('#myForm').trigger("reset");
+
+    $(document).on('click', '#like-button', function (e) {
+        e.preventDefault();
+        $.ajax({
+            type: 'POST',
+            url: '{% url "accounts:like" %}',
+            data: {
+                postid: $('#like-button').val(),
+                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+                action: 'post'
+            },
+            success: function (json) {
+                document.getElementById("like_count").innerHTML = json['result']
+            },
+            error: function (xhr, errmsg, err) {
+
+            }
+        });
+    })
 </script>
 
+{% include "includes/footer.html" %}
 {% endblock %}
