--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -19,10 +19,13 @@ Nue Blog
         </div>
     </div>
 </div>
-<div class="album py-5 bg-light">
+<!-- FEATURED SECTION -->
+<div class="album py-5">
     <div class="container">
         <div class="row">
             {% for post in posts %}
+            {% if post.featured == 'featured' %}
+            
             <div class="col-md-3 flexed">
                 <a class="text-dark" href="{{post.get_absolute_url}}">
                     <div class="card mb-5">
@@ -40,9 +43,45 @@ Nue Blog
                     </div>
                 </a>
             </div>
+            {% endif %}
+
+                
             {% endfor %}
 
         </div>
     </div>
 </div>
+<!-- FEATURED SECTION -->
+
+<!-- POSTS -->
+<div class="album py-5 bg-light">
+    <div class="container">
+        <div class="row">
+            {% for post in posts %}
+            
+            <div class="col-md-3 flexed">
+                <a class="text-dark" href="{{post.get_absolute_url}}">
+                    <div class="card mb-5">
+                        <img class="card-img-top post-image" src="{{ post.image.url }}" alt="{{ post.title }}">
+                        <div class="card-body">
+                            <h2 style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
+                            <p class="card-text" style="height: 65px;">{{post.excerpt|truncatechars:50}}</p>
+
+                        </div>
+                        <div class="d-flex py-1 justify-content-between align-items-right">
+                            <small class="text-muted post-published-date">{{post.publish}}</small>
+                            <small class="text-muted post-author">{{post.author}}</small>
+
+                        </div>
+                    </div>
+                </a>
+            </div>
+                
+            {% endfor %}
+
+        </div>
+    </div>
+</div>
+<!-- POSTS -->
+
 {% endblock content %}
