--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -6,7 +6,7 @@ Nue Blog
 {% endblock title %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid">
+<!-- <div class="jumbotron jumbotron-fluid">
     <div class="container text-center">
         <h1 class="display-4">
             <img class="img-fluid jumbotron-logo" src="{% static 'images/nueuibloglogo.png' %}">
@@ -18,19 +18,17 @@ Nue Blog
             <a class="contact-link" href="">CONTACT</a>
         </div>
     </div>
-</div>
-<!-- FEATURED SECTION -->
+</div> -->
+
 <div class="album py-5">
     <div class="container">
         <div class="row">
             {% for post in posts %}
-            {% if post.featured == 'featured' %}
-            
-            <div class="col-md-3 flexed">
+            {% if post.large_feature == True %}
+            <div class="col-md-9">
                 <a class="text-dark" href="{{post.get_absolute_url}}">
-                    <div class="card mb-5">
-                        <img class="card-img-top post-image" src="{{ post.image.url }}" alt="{{ post.title }}">
-                        <div class="card-body">
+                    <div class="featured-card mb-5">
+                        <!-- <div class="featured-card-body">
                             <h2 style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
                             <p class="card-text" style="height: 65px;">{{post.excerpt|truncatechars:50}}</p>
 
@@ -39,15 +37,62 @@ Nue Blog
                             <small class="text-muted post-published-date">{{post.publish}}</small>
                             <small class="text-muted post-author">{{post.author}}</small>
 
-                        </div>
+                        </div> -->
+                        <img class="featured-card-img-top img-fluid post-image" src="{{ post.image.url }}" alt="{{ post.title }}">
+                        
                     </div>
                 </a>
+
             </div>
             {% endif %}
-
-                
             {% endfor %}
 
+            <div class="col-md-3 small-featured-box flexed">
+                <div class="col-md-3 logo-section flexed">
+                    <h2 class="featured-title">LATESTS POSTS</h2>
+                </div>
+                {% for post in posts %}
+                {% if post.small_feature_1 == True %}
+                <a class="text-dark" href="{{post.get_absolute_url}}">
+                    <div class="small-featured-card">
+                        <!-- <div class="featured-card-body">
+                            <h2 style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
+                            <p class="card-text" style="height: 65px;">{{post.excerpt|truncatechars:50}}</p>
+            
+                        </div>
+                        <div class="d-flex py-1 justify-content-between align-items-right">
+                            <small class="text-muted post-published-date">{{post.publish}}</small>
+                            <small class="text-muted post-author">{{post.author}}</small>
+            
+                        </div> -->
+                        <img class="small-featured-card-img-top img-fluid post-image" src="{{ post.image.url }}" alt="{{ post.title }}">
+                        
+                    </div>
+                </a>
+                {% endif %}
+                {% endfor %}
+                
+                {% for post in posts %}
+                {% if post.small_feature_2 == True %}
+                <a class="text-dark" href="{{post.get_absolute_url}}">
+                    <div class="small-featured-card">
+                        <!-- <div class="featured-card-body">
+                            <h2 style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
+                            <p class="card-text" style="height: 65px;">{{post.excerpt|truncatechars:50}}</p>
+            
+                        </div>
+                        <div class="d-flex py-1 justify-content-between align-items-right">
+                            <small class="text-muted post-published-date">{{post.publish}}</small>
+                            <small class="text-muted post-author">{{post.author}}</small>
+            
+                        </div> -->
+                        <img class="small-featured-card-img-top img-fluid post-image" src="{{ post.image.url }}" alt="{{ post.title }}">
+                        
+                    </div>
+                </a>
+                {% endif %}
+                {% endfor %}
+            </div>
         </div>
     </div>
 </div>
