fixed styles on several pages

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,8 @@ LITTLE HELPERS
 }
 
 * {
-    border-radius: 0px !important;
+    border: none;
+    border-radius: 0px;
 }
 
 .flexed {
@@ -291,9 +292,7 @@ BUTTONS
     transition: 0.3s ease-out;
 }
 
-.featured-card:hover>.large-feature-overlay {
-    opacity: 1;
-}
+
 
 .featured-card-body {
     flex: 1 1 auto;
@@ -316,6 +315,9 @@ BUTTONS
     width: 100%;
     flex-flow: column !important;
     justify-content: space-between !important;
+    align-items: flex-end;
+
+    border: 1px solid red;
 
 }
 
@@ -324,7 +326,8 @@ BUTTONS
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: calc(500px / 2 - 10px);
+    height: 100%;
+    padding: 0;
     min-width: 0;
     word-wrap: break-word;
     background-color: #fff;
@@ -334,11 +337,10 @@ BUTTONS
 
 }
 
+
 .small-featured-card-img-top {
     height: 100%;
     width: 100%;
-
-
 }
 
 .logo-section {
@@ -350,8 +352,46 @@ BUTTONS
 }
 
 .socials {
-    height: 65%;
+    height: 100%;
     font-size: 1.5rem;
+    flex-flow: row;
+    width: 25%;
+}
+
+.socials-inner {
+    justify-content: space-between;
+    transition: 0.1s;
+}
+
+.socials-inner div i {
+    color: #222;
+}
+
+.fa-facebook-f:hover {
+    color: #4267B2 !important;
+}
+
+.fa-twitter:hover {
+    color: #1DA1F2 !important;
+}
+
+.fa-pinterest:hover {
+    color: #E60023 !important;
+}
+
+.fa-reddit:hover {
+    color: #ED001C !important;
+}
+
+.fa-whatsapp:hover {
+    color: #25D366 !important;
+}
+
+.socials-inner small {
+    width: 100%;
+    justify-content: space-between;
+    font-weight: 300;
+    opacity: 0.7;
 }
 
 .card {
@@ -383,6 +423,73 @@ BUTTONS
         0 100px 80px rgba(0, 0, 0, 0.04);
 }
 
+.feature-container {
+    justify-content: space-between;
+}
+
+.main-feature-card,
+.main-feature-card-2 {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    height: fit-content;
+    width: 57%;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+}
+
+.main-feature-card-2 {
+    width: 40%;
+
+}
+
+/* .feature-card-img {
+    object-fit: fill !important;
+} */
+
+.card-img-overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    transition: 0.3s;
+    opacity: 0;
+    background: rgb(72, 170, 139);
+    background: linear-gradient(183deg, rgba(72, 170, 139, 1) 0%, rgba(72, 170, 139, 0.4822303921568627) 35%, rgba(72, 170, 139, 0.09287464985994398) 100%);
+}
+
+.showthis {
+    opacity: 0;
+    transition: 0.3s;
+    transition-delay: 0.3s;
+
+
+}
+
+
+.main-feature-card:hover>.card-img-overlay {
+    opacity: 1;
+}
+
+.main-feature-card-2:hover>.card-img-overlay {
+    opacity: 1;
+}
+
+.card-img-overlay:hover>.showthis {
+    opacity: 1;
+}
+
+.featured-card-title,
+.featured-card-text {
+    color: #FFF;
+}
+
 
 .post-published-date {
     padding-left: 16px;
@@ -407,11 +514,13 @@ POST DISPLAY PAGE
 }
 
 .post-content {
-    border-top: 5px solid #222;
-    border-bottom: 5px solid #222;
+    font-weight: 300;
+    margin-top: 65px;
 }
 
 /* COMMENT BOX */
+
+
 
 .comment-box {
     border-left: 2px solid #48AA8B;
@@ -492,4 +601,36 @@ FAVORITE POSTS PAGE
 
 .remove-post-button:hover {
     color: #48AA8B;
+}
+
+
+/* 
+===========
+SEARCH PAGE
+===========
+*/
+
+#id_q {
+    border-bottom: 1px solid #000;
+}
+
+
+
+@media (max-width: 992px) {
+
+    .feature-container {
+        max-width: 960px;
+        height: 500px;
+        flex-flow: column;
+
+    }
+
+    .main-feature-card,
+    .main-feature-card-2 {
+        width: 100%;
+    }
+
+    .main-feature-card {
+        /* margin-bottom: 25px; */
+    }
 }
