--- a/templates/includes/scripts.html
+++ b/templates/includes/scripts.html
@@ -10,4 +10,8 @@
     var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
         return new bootstrap.Tooltip(tooltipTriggerEl)
     })
+
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
 </script>
