--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -8,113 +8,40 @@ Nue Blog
 {% endblock title %}
 
 {% block content %}
-<!-- <div class="jumbotron jumbotron-fluid">
-    <div class="container text-center">
-        <h1 class="display-4">
-            <img class="img-fluid jumbotron-logo" src="{% static 'images/nueuibloglogo.png' %}">
-        </h1>
-        <p class="lead text-uppercase">Here's a nightly summary of what the hell is going on...</p>
-        <div class="flexed">
-            <a class="about-link" href="">ABOUT</a>
-            <span class="mx-2">|</span>
-            <a class="contact-link" href="">CONTACT</a>
-        </div>
-    </div>
-</div> -->
 
-<div class="album py-5">
-    <div class="container">
-        <div class="row">
-            {% for post in posts %}
-            {% if post.large_feature == True %}
-            <div class="col-md-7">
-                <a class="text-dark" href="{{post.get_absolute_url}}">
-                    <div class="featured-card mb-5">
-                        <div class="large-feature-overlay flexed">
 
-                            <div class="featured-card-body">
-                                <h2 style="font-size:18px;font-weight:bold;color: white;">{{post.title|truncatechars:50}}</h2>
-                                <p class="card-text" style="height: 65px;">By: {{post.author}}</p>
-                                <div class="socials row">
-                                    {% post_to_facebook object_or_url "<i style='color: #FFF    ' class='fab fa-facebook-f'></i>" %}
-                                    {% post_to_twitter "Check out this post by {{ post.author }}, called {{ post.title }}" object_or_url "<i style='color: #FFF' class='fab fa-twitter'></i>" %}
-                                    <a style="cursor: pointer;" class="pinterest-this ">
-                                        <span class="PIN_1626091531472_button_pin PIN_1626091531472_save"
-                                            data-pin-log="button_pinit_bookmarklet"><i style='color: #FFF'
-                                                class="fab fa-pinterest"></i></span>
-                                    </a>
-                                    {% post_to_reddit "Check out this post by {{ post.author }}, called {{ post.title }}" object_or_url "<i style='color: #FFF' class='fab fa-reddit'></i>" %}
-                                    {% post_to_whatsapp  object_or_url "<i style='color: #FFF' class='fab fa-whatsapp'></i>" %}
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <div class="d-flex py-1 justify-content-between align-items-right">
-                            <small class="text-muted post-published-date">{{post.publish}}</small>
-                            <small class="text-muted post-author">{{post.author}}</small>
-
-                        </div> -->
-                        <img class="featured-card-img-top img-fluid post-image" src="{{ post.image.url }}"
-                            alt="{{ post.title }}">
-
-                    </div>
-                </a>
-
-            </div>
-            {% endif %}
-            {% endfor %}
-
-            <div class="col-md-5 small-featured-box flexed">
-                <!-- <div class="col-md-5 logo-section flexed">
-                    <h2 class="featured-title">LATESTS POSTS</h2>
-                </div> -->
-                {% for post in posts %}
-                {% if post.small_feature_1 == True %}
-                <a class="text-dark" href="{{post.get_absolute_url}}">
-                    <div class="small-featured-card">
-                        <!-- <div class="featured-card-body">
-                            <h2 style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
-                            <p class="card-text" style="height: 65px;">{{post.excerpt|truncatechars:50}}</p>
-            
-                        </div>
-                        <div class="d-flex py-1 justify-content-between align-items-right">
-                            <small class="text-muted post-published-date">{{post.publish}}</small>
-                            <small class="text-muted post-author">{{post.author}}</small>
-            
-                        </div> -->
-                        <img class="small-featured-card-img-top img-fluid post-image" src="{{ post.image.url }}"
-                            alt="{{ post.title }}">
-
-                    </div>
-                </a>
-                {% endif %}
-                {% endfor %}
-
-                {% for post in posts %}
-                {% if post.small_feature_2 == True %}
-                <a class="text-dark" href="{{post.get_absolute_url}}">
-                    <div class="small-featured-card">
-                        <!-- <div class="featured-card-body">
-                            <h2 style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
-                            <p class="card-text" style="height: 65px;">{{post.excerpt|truncatechars:50}}</p>
-            
-                        </div>
-                        <div class="d-flex py-1 justify-content-between align-items-right">
-                            <small class="text-muted post-published-date">{{post.publish}}</small>
-                            <small class="text-muted post-author">{{post.author}}</small>
-            
-                        </div> -->
-                        <img class="small-featured-card-img-top img-fluid post-image" src="{{ post.image.url }}"
-                            alt="{{ post.title }}">
-
-                    </div>
-                </a>
-                {% endif %}
-                {% endfor %}
-            </div>
-        </div>
-    </div>
-</div>
 <!-- FEATURED SECTION -->
+<div class="container my-5 feature-container flexed">
+    {% for post in posts  %}
+    {% if post.large_feature == True %}
+    <a href="{{post.get_absolute_url}}" class="main-feature-card bg-dark text-white">
+        <img class="card-img feature-card-img" src="{{ post.image.url }}" alt="{{ post.title }}">
+        <div class="card-img-overlay">
+            <h5 class="card-title featured-card-title m-0">{{post.title}}</h5>
+            <p class="card-text featured-card-text m-0">{{post.excerpt}}.</p>
+            <div class="showthis my-2">
+                By: {{post.author}}
+            </div>
+        </div>
+    </a>
+    {% endif %}
+    {% endfor %}
+
+    {% for post in posts  %}
+    {% if post.small_feature == True %}
+    <a href="{{post.get_absolute_url}}" class="main-feature-card-2 bg-dark text-white">
+        <img class="card-img feature-card-img" style="height: auto;" src="{{ post.image.url }}" alt="{{ post.title }}">
+        <div class="card-img-overlay">
+            <h5 class="card-title featured-card-title m-0">{{post.title}}</h5>
+            <p class="card-text featured-card-text m-0"><em>{{post.excerpt}}.</em></p>
+            <div class="showthis my-2">
+                By: {{post.author}}
+            </div>
+        </div>
+    </a>
+    {% endif %}
+    {% endfor %}
+</div>
 
 <!-- POSTS -->
 <div class="album py-5 bg-light">
@@ -146,6 +73,5 @@ Nue Blog
     </div>
 </div>
 <!-- POSTS -->
-{% add_pinterest_script %}
 
 {% endblock content %}
