--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,7 +10,7 @@
     }
 </style>
 
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom">
     <h5 class="my-0 mr-md-auto font-weight-normal"><a class="text-dark" href="/">
             <img class="img-fluid navbar-logo" src="{% static 'images/nueuibloglogo.png' %}">
         </a>
