--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,6 +17,8 @@ LITTLE HELPERS
     border-radius: 0px;
 }
 
+
+
 .flexed {
     display: flex;
     align-items: center;
@@ -405,8 +407,15 @@ BUTTONS
     background-clip: border-box;
     border: none;
     transition: 0.3s ease-out;
-    border-top: 3px solid #222;
-    border-bottom: 3px solid #222;
+    /* border-top: 3px solid #48AA8B; */
+    /* border-bottom: 3px solid #48AA8B; */
+    box-shadow:
+        0 1.4px 1.2px rgba(0, 0, 0, 0.04),
+        0 3.5px 2.9px rgba(0, 0, 0, 0.029),
+        0 6.5px 5.4px rgba(0, 0, 0, 0.024),
+        0 11.6px 9.6px rgba(0, 0, 0, 0.02),
+        0 21.7px 18px rgba(0, 0, 0, 0.016),
+        0 52px 43px rgba(0, 0, 0, 0.011);
 
 }
 
@@ -538,6 +547,7 @@ POST DISPLAY PAGE
 
 .comment-form p label {
     font-size: 16px;
+    margin: 0;
 
 }
 
@@ -547,17 +557,25 @@ POST DISPLAY PAGE
     padding: 0;
 }
 
-input[type="text"i] {
-    border: none;
+
+.comment-form p input:active {
+    border: 2px solid red !important;
 }
+
+.myForm p input {
+    border: none !important;
+}
+
+
 
 .form-control:focus {
     border-bottom: 1px solid #48AA8B !important;
     box-shadow: none;
 }
 
+
 #id_name:active {
-    border: none !important;
+    border: 1px solid red !important;
 }
 
 .modal-content {
@@ -611,7 +629,12 @@ SEARCH PAGE
 */
 
 #id_q {
+    border: none;
     border-bottom: 1px solid #000;
+}
+
+.search-form {
+    
 }
 
 
