--- a/templates/blog/search.html
+++ b/templates/blog/search.html
@@ -1,37 +1,32 @@
 {% extends "base/base.html" %}
+{% load static %}
 {% block title %}Search Page{% endblock %}
 {% block content %}
 <div class="container pt-5">
 
     {% if q %}
-    <h1>Posts containing "{{ q }}"
-
-        {% if c %}
-        In category "{{ c }}"
-        {% endif %}
-
-    </h1>
+    <h1 style="font-weight: 300;">Posts containing "{{ q }}"</h1>
     <p>
         {% with results.count as total_results %}
         Found {{ total_results }} result{{ total_results|pluralize }}
         {% endwith %}
     </p>
 
-
-    <div class="album py-5 bg-light">
+    <div class="album py-5">
         <div class="container">
             <div class="row">
                 {% for post in results %}
-                <div class="col-md-4">
+                <div class="col-md-3 flexed">
                     <a class="text-dark" href="{{post.get_absolute_url}}">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="{{post.image.url}}" alt="{{ post.title }}">
+                        <div class="card mb-5">
+                            <img class="card-img-top post-image" src="{{ post.image.url }}" alt="{{ post.title }}">
                             <div class="card-body">
                                 <h2 style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
-                                <p class="card-text">{{post.excerpt|truncatechars:50}}</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <small class="text-muted">9 mins</small>
-                                </div>
+                                <p class="card-text" style="height: 65px;">{{post.excerpt|truncatechars:50}}</p>
+                            </div>
+                            <div class="d-flex py-1 justify-content-between align-items-right">
+                                <small class="text-muted post-published-date">{{post.publish}}</small>
+                                <small class="text-muted post-author">{{post.author}}</small>
                             </div>
                         </div>
                     </a>
@@ -42,15 +37,29 @@
             </div>
         </div>
     </div>
-
-
     <p>
         <a href="{% url "blog:post_search" %}" class="btn btn-primary" role="button" aria-disabled="true">New
-            Search</a>
+            Search
+        </a>
     </p>
     {% else %}
-    <h1>Search for posts</h1>
-    <form class="dropdown" method="get">
+    <div class="container">
+        <section class="jumbotron text-center bg-white">
+            <div class="container">
+                <h1 class="display-4 mb-4">
+                    <img class="img-fluid jumbotron-logo" src="{% static 'images/nueuibloglogo.png' %}">
+                </h1>
+                <h1 style="font-weight: 300;">SEARCH POSTS</h1>
+                <!-- <p class="lead text-muted">Something short and leading about the collection below—its contents, the
+                    creator,
+                    etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+                <p> -->
+                    <a href="/" class="btn btn-primary my-2">Home</a>
+                </p>
+            </div>
+        </section>
+    </div>
+    <form class="search-form mt-5" method="get">
         {% csrf_token %}
         {{ form.q }}
         <ul class="dropdown-menu col-12 pl-2" role="menu" aria-labelledby="menu" id="list">
