--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -59,9 +59,9 @@ Nue Blog
 
                         </div>
                         <div class="d-flex py-1 justify-content-between align-items-right">
-                            <small class="text-muted post-published-date">{{post.publish}}</small>
-                            <small class="text-muted post-author">{{post.author}}</small>
-
+                            <small class="post-published-date">{{post.publish}}</small>
+                            <small class="post-author">{{post.author}}</small>
+ 
                         </div>
                     </div>
                 </a>
